--- a/ee106a_project.html
+++ b/ee106a_project.html
@@ -40,7 +40,7 @@
                 <h4> Design Overview </h4>
                 <p> We designed a 6-axis robot, composed of two main assemblies: a 3 axis Cartesian gantry, and a 3 axis rotating end effector.</p>
                 <img src="ee106a_project_assets/images/design/robot_cad.png" alt="Robot CAD image" class="picture center">
-                <p> The rotating end effector then has two parts: a rotation joint and a two-axis differential wrist joint.  We use this differential joint instead of discreetly actuating the pitch and yaw axes to make one motor move less, and to make the end effector more compact. </p>
+                <p> The rotating end effector then has two parts: a rotation joint and a two-axis differential wrist joint.  We use this differential joint instead of discreetly actuating the pitch and yaw axes to reduce the number of wires that need to move around a joint, and to make the end effector more compact. </p>
                 <img src="ee106a_project_assets/images/design/differential_joint.png" alt="Differential joint image" class="picture center">
                 <p> Each of the prismatic joints is belt-driven directly by the stepper motors. </p>
                 <p> The rotating joint (roll) connecting the gantry to the wrist has a worm drive. </p>
@@ -216,7 +216,7 @@
                     <img src="ee106a_project_assets/images/team/david_guo.jpg" alt="David Guo" class="team-picture">
                     <div class="team-text">
                         <div class="team-name"> <b>David Guo</b> - MechE </div>
-                        <div class="team-desc"> Mechanical Engineering major and EECS minor, experience with CAD and simulation programs, rapid prototyping and manufacturing skills </div>
+                        <div class="team-desc"> MechE major and EECS minor. Experience in mechanical engineering design for collegiate Formula SAE competition series. </div>
                     </div>
                 </div>
                 <div class="team-member">
