--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
 
 <body onload="setMode()">
     <div class="sidebar">
-        <p id="menu"> Menu </p>
-        <a href="/">About</a>
-        <a href="resume">Resume/CV</a>
-        <a href="projects">Projects</a>
-        <a href="gallery">Gallery</a>
-        <div id="button-container"><button onClick="darkToggle()"><i>Toggle Theme</i></button></div>
+        <div id="menu">
+
+        </div>
+        <div id="">
+
+        </div>
     </div>
     <div class="main">
-        <div id="left">
-            <h1> Charles Paxson </h1>
-            <h2> Student </h2>
-            <img id="rhombicosidodecahedron" src="./images/optimizedRhombicosidodecahedronGif.gif" />
-        </div>
-        <div id="right">
-            <div class="container" id="About">
-                <h2> About </h2>
-                <p> I'm a junior transfer student in mechanical engineering at UC Berkeley.  I've done a decent amount of work in the field, and hope to do more as I complete my schooling and beyond. </p>
-            </div>
-        </div>
+
     </div>
     <footer>
         <div class="contact">
             <h3> Contact/Platforms</h3>
-            <a href="https://discord.com/users/288182931933888513">Discord</a>
-            <a href="mailto:chpaxson@berkeley.edu">Email</a>
-            <a href="https://github.com/molecules1">Github</a>
-            <a href="https://www.reddit.com/user/_molecules">Reddit</a>
-            <a href="https://www.youtube.com/channel/UCifYwaTzzs6sm_tgiWigJSA">Youtube</a>
+            <a href="https://discord.com/users/288182931933888513">
+                <i class="contactIcons fab fa-discord" id="discord" aria-hidden="true"></i>
+            </a>
+            <a href="mailto:chpaxson@berkeley.edu">
+                <i class="contactIcons fas fa-envelope" id="email" aria-hidden="true"></i>
+            </a>
+            <a href="https://github.com/molecules1">
+                <i class="contactIcons fab fa-github" id="github" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.reddit.com/user/_molecules">
+                <i class="contactIcons fab fa-reddit" id="reddit" aria-hidden="true"></i>
+            </a>
+            <a href="https://www.youtube.com/channel/UCifYwaTzzs6sm_tgiWigJSA">
+                <i class="contactIcons fab fa-youtube" id="youtube" aria-hidden="true"></i>
+            </a>
         </div>
     </footer>
 </body>
