--- a/data/webgui.html
+++ b/data/webgui.html
@@ -3,12 +3,12 @@
 
 <head>
       <meta charset="UTF-8">
-      <link rel="icon" href="data/webgui/assets/logo.png">
+      <link rel="icon" href="/data/webgui/assets/logo.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Echo Telepresence</title>
       <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet">
-  <script type="module" crossorigin src="data/webgui/assets/index.js"></script>
-  <link rel="stylesheet" crossorigin href="data/webgui/assets/index.css">
+  <script type="module" crossorigin src="/data/assets/index.js"></script>
+  <link rel="stylesheet" crossorigin href="/data/assets/index.css">
 </head>
 
 <body>
