--- a/data/webgui.html
+++ b/data/webgui.html
@@ -3,7 +3,7 @@
 
 <head>
       <meta charset="UTF-8">
-      <link rel="icon" href="/data/webgui/assets/logo.png">
+      <link rel="icon" href="/data/assets/logo.png">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Echo Telepresence</title>
       <link href="https://fonts.cdnfonts.com/css/lato" rel="stylesheet">
